Fix scrollbar layout issue in rtl

--- a/crates/vizia_core/resources/themes/default_layout.css
+++ b/crates/vizia_core/resources/themes/default_layout.css
@@ -701,10 +701,6 @@ scrollview > scrollbar.vertical {
     left: 1s;
 }
 
-.rtl scrollview > scrollbar.vertical {
-    left: 0px;
-}
-
 /* SCROLLBAR */
 
 scrollbar.horizontal {
